Created fundamental view of project (tabbed menu, icons, views, controllers and services files).

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -5,20 +5,29 @@ navigation history that also transitions its views in and out.
 -->
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
-  <!-- Dashboard Tab -->
-  <ion-tab title="Status" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/dash">
-    <ion-nav-view name="tab-dash"></ion-nav-view>
-  </ion-tab>
+    <!-- Terminy Tab -->
+    <ion-tab title="Terminy" icon-off="ion-ios-calendar-outline" icon-on="ion-ios-calendar" href="#/tab/treatments">
+        <ion-nav-view name="tab-treatments"></ion-nav-view>
+    </ion-tab>
 
-  <!-- Chats Tab -->
-  <ion-tab title="Chats" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/tab/chats">
-    <ion-nav-view name="tab-chats"></ion-nav-view>
-  </ion-tab>
+    <!-- Cennik Tab -->
+    <ion-tab title="Cennik" icon-off="ion-ios-list-outline" icon-on="ion-ios-list" href="#/tab/pricelist">
+        <ion-nav-view name="tab-pricelist"></ion-nav-view>
+    </ion-tab>
 
-  <!-- Account Tab -->
-  <ion-tab title="Account" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/account">
-    <ion-nav-view name="tab-account"></ion-nav-view>
-  </ion-tab>
+    <!-- Pracownicy Tab -->
+    <ion-tab title="Pracownicy" icon-off="ion-ios-people-outline" icon-on="ion-ios-people" href="#/tab/employees">
+        <ion-nav-view name="tab-employees"></ion-nav-view>
+    </ion-tab>
 
+    <!-- Kontakt Tab -->
+    <ion-tab title="Kontakt" icon-off="ion-ios-email-outline" icon-on="ion-ios-email" href="#/tab/contact">
+        <ion-nav-view name="tab-contact"></ion-nav-view>
+    </ion-tab>
+
+    <!-- O programie Tab -->
+    <ion-tab title="O programie" icon-off="ion-ios-information-outline" icon-on="ion-ios-information" href="#/tab/about">
+        <ion-nav-view name="tab-about"></ion-nav-view>
+    </ion-tab>
 
 </ion-tabs>
