--- a/www/templates/employees/employees.html
+++ b/www/templates/employees/employees.html
@@ -5,7 +5,7 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 
-<ion-view view-title="Pracownicy">
+<ion-view view-title="Pracownicy gabinetu">
   <ion-content class="padding">
       <p>This is a part of Employees View</p>
   </ion-content>
