Added redirecting to details view for treatments and employees views.

--- a/www/templates/about/about.html
+++ b/www/templates/about/about.html
@@ -6,26 +6,26 @@ and open the template in the editor.
 -->
 
 <ion-view view-title="O programie">
-    <ion-content class="padding">
+    <ion-content class="padding" style="text-align: center;">
         <div class="row">
-            <div class="col" style="text-align: center;">
+            <div class="col" >
                 <span>Aplikacja mobilna przeznaczona dla pacjentów habinetu rehabilitacyjnego XYZ, mająca na celu 
                     ułatwienie i usprawnienie korzystania z usług oferowanych przez gabinet.</span>
             </div>
         </div>
         <div class="row" style="padding-top: 25px">
-            <div class="col" style="text-align: center;">
+            <div class="col">
                 <img  style="height:160px;" src="../img/ionic.png" />
             </div>
         </div>
         <div class="row">
-            <div class="col" style="text-align: center;">
+            <div class="col">
                 <span>RehApp<br>
                     Wersja: 1.0.0</span>
             </div>
         </div>
         <div class="row" style="padding-top: 25px">
-            <div class="col" style="text-align: center;">
+            <div class="col">
                 <span>Copyright &copy 2015 Michał Pietrzak<br>
                     Wszystkie prawa zastrzeżone</span>
             </div>
