--- a/www/templates/employees/employee_details.html
+++ b/www/templates/employees/employee_details.html
@@ -5,4 +5,8 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 
-<p>This is the partial for treatments details.</p>
+<ion-view view-title="Szczegóły">
+    <ion-content class="padding" style="text-align: center">
+        <p>This a part of Employee Details view.</p>
+    </ion-content>
+</ion-view>
