--- a/www/templates/employees/employees.html
+++ b/www/templates/employees/employees.html
@@ -6,18 +6,19 @@ and open the template in the editor.
 -->
 
 <ion-view view-title="Pracownicy gabinetu">
-    <ion-content class="padding">
-        <div class="list" data-ng-repeat="employee in employees">
-            <div class="row" style="text-align: center">
-                <div class="col" data-ng-click="alert()">
-                    <img style="height:100px;" src="{{employee.img}}" />
-                    <p>{{employee.name}}</p>
+    <ion-content class="padding" style="text-align: center;">
+        <div class="list">
+            <div class="row" data-ng-repeat="employee in employees">
+                <div class="col col-40">
+                    <img style="height:105px;" src="{{employee.img}}"/>
                 </div>
-                <div class="col">
-                    <img style="height:100px;" src="{{employee.img}}" />
+                <div class="col col-60">
                     <p>{{employee.name}}</p>
+                    <p>Stanowisko: {{employee.position}}</p>
+                    <button class="button button-small button-positive" data-ui-sref="tab.employee-detail({employeeId: employee.id})">Więcej</button>
                 </div>
             </div>
+            
         </div>
     </ion-content>
 </ion-view>
