--- a/www/templates/price/price_list.html
+++ b/www/templates/price/price_list.html
@@ -6,12 +6,12 @@ and open the template in the editor.
 -->
 
 <ion-view view-title="Cennik usług">
-    <ion-content class="padding">
-        <div class="row header" style="text-align: center">
+    <ion-content class="padding" style="text-align: center">
+        <div class="row header" style="padding-bottom: 15px; font-weight: bold;">
             <div class="col">Rodzaj zabiegu</div>
             <div class="col">Cena/czas trwania</div>
         </div>
-        <div class="row" data-ng-repeat="price in prices" style="text-align: center">
+        <div class="row" data-ng-repeat="price in prices" style="padding-bottom: 15px;">
             <div class="col">{{price.kindOfTreatment}}</div>
             <div class="col">{{price.price}} zł/{{price.time}} min</div>
         </div>
