--- a/www/templates/treatments/treatment_details.html
+++ b/www/templates/treatments/treatment_details.html
@@ -5,4 +5,8 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 
-<p>This is the partial for employees details.</p>
+<ion-view view-title="Szczegóły zabiegu">
+    <ion-content class="padding" style="text-align: center">
+        <p>This a part of Treatments Details view.</p>
+    </ion-content>
+</ion-view>
