Created login view and added borders to tables.

--- a/www/templates/about/about.html
+++ b/www/templates/about/about.html
@@ -1,21 +1,14 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-
 <ion-view view-title="O programie">
     <ion-content class="padding" style="text-align: center;">
         <div class="row">
             <div class="col" >
-                <span>Aplikacja mobilna przeznaczona dla pacjentów habinetu rehabilitacyjnego XYZ, mająca na celu 
+                <span>Aplikacja mobilna przeznaczona dla pacjentów gabinetu rehabilitacyjnego XYZ, mająca na celu 
                     ułatwienie i usprawnienie korzystania z usług oferowanych przez gabinet.</span>
             </div>
         </div>
         <div class="row" style="padding-top: 25px">
             <div class="col">
-                <img  style="height:160px;" src="../img/ionic.png" />
+                <img  style="height:160px;" src="img/ionic.png" />
             </div>
         </div>
         <div class="row">
