--- a/www/templates/contact/contact.html
+++ b/www/templates/contact/contact.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-
 <ion-view view-title="Kontakt">
     <ion-content class="padding">
         <form name="form">
@@ -28,7 +21,7 @@ and open the template in the editor.
             </div>
         </form>
         <div class="col text-center">
-            <button style="width: 155" class="button button-positive" data-ng-click="showAlert()" data-ng-disabled="form.$invalid">
+            <button style="width: 155px" class="button button-positive" data-ng-click="showAlert()" data-ng-disabled="form.$invalid">
                 Wyślij wiadomość
             </button>
         </div>
