--- a/www/templates/employees/employee_details.html
+++ b/www/templates/employees/employee_details.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-
 <ion-view view-title="Szczegóły">
-    <ion-content class="padding" style="text-align: center">
-        <p>This a part of Employee Details view.</p>
+    <ion-content class="padding">
+        <p>Szczegółowy opis pracownika ...</p>
+        <div class="row" style="text-align: center">
+            <div class="col">
+                <button style="width: 155px" class="button button-positive" data-ui-sref="tab.contact" data-ng-disabled="form.$invalid">
+                    Wyślij wiadomość
+                </button>
+            </div>
+        </div>
     </ion-content>
 </ion-view>
