--- a/www/templates/employees/employees.html
+++ b/www/templates/employees/employees.html
@@ -1,24 +1,16 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-
 <ion-view view-title="Pracownicy gabinetu">
     <ion-content class="padding" style="text-align: center;">
         <div class="list">
-            <div class="row" data-ng-repeat="employee in employees">
+            <div class="row" style="margin-bottom: 5px; border-bottom:solid 1px" data-ng-repeat="employee in employees">
                 <div class="col col-40">
                     <img style="height:105px;" src="{{employee.img}}"/>
                 </div>
                 <div class="col col-60">
                     <p>{{employee.name}}</p>
                     <p>Stanowisko: {{employee.position}}</p>
-                    <button class="button button-small button-positive" data-ui-sref="tab.employee-detail({employeeId: employee.id})">Więcej</button>
+                    <button style="width: 125px" class="button button-small button-positive" data-ui-sref="tab.employee-detail({employeeId: employee.id})">Więcej</button>
                 </div>
-            </div>
-            
+            </div> 
         </div>
     </ion-content>
 </ion-view>
