Improved login page and redirecting after proper or invalid log in. Added logout button. Fixed bugs. Added search bar on employee view. Added temporary button for redirecting to empty treatments list.

--- a/www/templates/about/about.html
+++ b/www/templates/about/about.html
@@ -1,4 +1,9 @@
 <ion-view view-title="O programie">
+    <ion-nav-buttons side="right">
+        <button class="button button-small button-assertive" data-ng-click="logout()">
+            Wyloguj się
+        </button>
+    </ion-nav-buttons>
     <ion-content class="padding" style="text-align: center;">
         <div class="row">
             <div class="col" >
@@ -6,9 +11,9 @@
                     ułatwienie i usprawnienie korzystania z usług oferowanych przez gabinet.</span>
             </div>
         </div>
-        <div class="row" style="padding-top: 25px">
+        <div class="row" style="padding-top: 20px">
             <div class="col">
-                <img  style="height:160px;" src="img/ionic.png" />
+                <img  style="height:165px;" src="img/ionic.png" />
             </div>
         </div>
         <div class="row">
@@ -17,7 +22,7 @@
                     Wersja: 1.0.0</span>
             </div>
         </div>
-        <div class="row" style="padding-top: 25px">
+        <div class="row" style="padding-top: 20px">
             <div class="col">
                 <span>Copyright &copy 2015 Michał Pietrzak<br>
                     Wszystkie prawa zastrzeżone</span>
