--- a/www/templates/treatments/treatments.html
+++ b/www/templates/treatments/treatments.html
@@ -10,5 +10,6 @@
             <div class="col" style="line-height: 35px;">{{treatment.hour}}</div>
             <button class="col button button-small button-positive" style="margin-top: 5px;" data-ui-sref="tab.treatment-detail({treatmentId: treatment.id})">Więcej</button>
         </div>
+        <button class="button button-positive" style="margin-top: 5px;" data-ui-sref="tab.treatments-empty-list">Pusta lista</button>
     </ion-content>
 </ion-view>
