--- a/www/templates/employees/employees.html
+++ b/www/templates/employees/employees.html
@@ -1,12 +1,19 @@
 <ion-view view-title="Pracownicy gabinetu">
-    <ion-content class="padding" style="text-align: center;">
+    <ion-content class="padding" style="text-align: center;" start-y="55">
+        <div id="search-box" class="bar bar-header item-input-inset">
+            <div class="item-input-wrapper">
+                <i class="icon ion-search placeholder-icon"></i>
+                <input type="search" placeholder="Search" ng-model="data.searchQuery">
+                <i class="icon ion-ios-close-empty" style="font-size: 18px;" ng-click="clearSearch()"></i>
+            </div>
+        </div>
         <div class="list">
-            <div class="row" style="margin-bottom: 5px; border-bottom:solid 1px" data-ng-repeat="employee in employees">
+            <div class="row" style="margin-bottom: 5px; border-bottom:solid 1px" data-ng-repeat="employee in employees| filter: data.searchQuery">
                 <div class="col col-40">
                     <img style="height:105px;" src="{{employee.img}}"/>
                 </div>
                 <div class="col col-60">
-                    <p>{{employee.name}}</p>
+                    <p style="font-weight: bold;">{{employee.name}}</p>
                     <p>Stanowisko: {{employee.position}}</p>
                     <button style="width: 125px" class="button button-small button-positive" data-ui-sref="tab.employee-detail({employeeId: employee.id})">Więcej</button>
                 </div>
