--- a/www/templates/price/price_list.html
+++ b/www/templates/price/price_list.html
@@ -1,12 +1,12 @@
 <ion-view view-title="Cennik usług">
-    <ion-content class="padding" style="text-align: center">
+    <ion-content class="padding" style="text-align: center;">
         <div class="row header" style="font-weight: bold; border: 1px solid #dddddd; background-color: #F8F8F8; margin-bottom: 10px">
-            <div class="col">Rodzaj zabiegu</div>
-            <div class="col">Cena/czas trwania</div>
+            <div class="col col-60">Rodzaj zabiegu</div>
+            <div class="col col-40">Cena/czas trwania</div>
         </div>
-        <div class="row" data-ng-repeat="price in prices" style="margin-bottom: 10px; border: 1px solid #dddddd;">
-            <div class="col">{{price.kindOfTreatment}}</div>
-            <div class="col">{{price.price}} zł/{{price.time}} min</div>
+        <div class="row" data-ng-repeat="price in prices" style="height: 50px; margin-bottom: 10px; border: 1px solid #dddddd;">
+            <div class="col col-60">{{price.kindOfTreatment}}</div>
+            <div class="col col-40" style="line-height: 35px">{{price.price}} zł/{{price.time}} min</div>
         </div>
     </ion-content>
 </ion-view>
