Added search bar for price list. Added popover in about view which displays name and logout button. Added validation on username.

--- a/www/templates/about/about.html
+++ b/www/templates/about/about.html
@@ -1,8 +1,11 @@
 <ion-view view-title="O programie">
     <ion-nav-buttons side="right">
-        <button class="button button-small button-assertive" data-ng-click="logout()">
-            Wyloguj się
+        <button class="button button-icon" data-ng-click="popover.show($event)">
+            <i class="icon ion-power"></i>
         </button>
+        <!--        <button class="button button-small button-assertive" data-ng-click="logout()">
+            Wyloguj się
+        </button>-->
     </ion-nav-buttons>
     <ion-content class="padding" style="text-align: center;">
         <div class="row">
