--- a/www/templates/price/price_list.html
+++ b/www/templates/price/price_list.html
@@ -1,5 +1,12 @@
 <ion-view view-title="Cennik usług">
-    <ion-content class="padding" style="text-align: center;">
+    <ion-content class="padding" style="text-align: center;" start-y="27">
+        <div id="search-box" class="bar bar-header item-input-inset">
+            <div class="item-input-wrapper">
+                <i class="icon ion-search placeholder-icon"></i>
+                <input type="search" placeholder="Search" data-ng-model="data.searchQuery">
+                <i class="icon ion-ios-close-empty" data-ng-show="data.searchQuery.length" data-ng-click="clearSearch()"></i>
+            </div>
+        </div>
         <div class="row header" style="font-weight: bold; border: 1px solid #dddddd; background-color: #F8F8F8; margin-bottom: 10px">
             <div class="col col-60">Rodzaj zabiegu</div>
             <div class="col col-40">Cena/czas trwania</div>
