--- a/www/templates/contact/contact.html
+++ b/www/templates/contact/contact.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Kontakt">
     <ion-content class="padding">
         <form name="form">
-            <div class="list list-inset">
+            <div class="list list-item">
                 <label class="item item-input item-select">
                     <div class="input-label">
                         Do:
@@ -15,7 +15,7 @@
                     <input name="title" type="text" placeholder="Tytuł wiadomości..." data-ng-model="contact.title" required>
                 </label>
                 <label class="item item-input">
-                    <textarea name="content" style="height: 240px;" placeholder="Treść wiadomości..." data-ng-model="contact.content" required></textarea>
+                    <textarea name="content" style="height: 280px;" placeholder="Treść wiadomości..." data-ng-model="contact.content" required></textarea>
                 </label>
             </div>
         </form>
