--- a/www/templates/login/login.html
+++ b/www/templates/login/login.html
@@ -4,19 +4,21 @@
             <div class="list">
                 <label class="item item-input">
                     <span class="input-label">Nazwa użytkownika</span>
-                    <input name="username" type="text" data-ng-model="user.username" required>
+                    <input name="username" type="text" data-ng-model="user.username" data-ng-pattern="/[0-9]{11}/g" required>
+                    <span data-ng-show="form.username">
                 </label>
                 <label class="item item-input">
                     <span class="input-label">Hasło</span>
                     <input name="password" type="password" data-ng-model="user.password" required>
                 </label>
+                <p style="color: red;" data-ng-show="error">Wprowadź prawidłowe dane logowania</p>
             </div>
         </form>
         <div class="col text-center" data-ng-switch="user.username === user.password">
-            <button data-ng-switch-when="true" style="width: 155px" class="button button-positive" data-ui-sref="change"  data-ng-disabled="form.$invalid">
+            <button data-ng-switch-when="true" style="width: 155px" class="button button-positive" data-ng-click="login('change')" data-ng-disabled="form.$invalid">
                 Zaloguj się
             </button>
-            <button data-ng-switch-when="false" style="width: 155px" class="button button-positive" data-ui-sref="tab.treatments"  data-ng-disabled="form.$invalid">
+            <button data-ng-switch-when="false" style="width: 155px" class="button button-positive" data-ng-click="login('tab.treatments')" data-ng-disabled="form.$invalid">
                 Zaloguj się
             </button>
         </div>
