Fixed searching in price list and added ordering by.

--- a/www/templates/price/price_list.html
+++ b/www/templates/price/price_list.html
@@ -11,7 +11,7 @@
             <div class="col">Rodzaj zabiegu</div>
             <div class="col">Cena/czas trwania</div>
         </div>
-        <div class="row" data-ng-repeat="price in prices" style="height: 50px; margin-bottom: 10px; border: 1px solid #dddddd;">
+        <div class="row" data-ng-repeat="price in prices |filter: data.searchQuery |orderBy: 'kindOfTreatment'" style="height: 50px; margin-bottom: 10px; border: 1px solid #dddddd;">
             <div class="col">{{price.kindOfTreatment}}</div>
             <div class="col" style="line-height: 35px">{{price.price}} zł/{{price.time}} min</div>
         </div>
