--- a/www/templates/about/about.html
+++ b/www/templates/about/about.html
@@ -28,5 +28,14 @@
                     Wszystkie prawa zastrzeżone</span>
             </div>
         </div>
+<!--        <button class="button button-full button-positive" ng-click="performValidRequest()">
+            Make Valid Request
+        </button>
+        <button class="button button-full button-energized" ng-click="performUnauthorizedRequest()">
+            Make Request for unauthorized resource
+        </button>
+        <button class="button button-full button-assertive" ng-click="performInvalidRequest()">
+            Make Request without valid token
+        </button>-->
     </ion-content>
 </ion-view>
