--- a/www/templates/about/popover.html
+++ b/www/templates/about/popover.html
@@ -2,7 +2,7 @@
     <ion-content>
         <div class="list">
             <a class="item"> <i class="ion ion-person"></i>
-                Michał Pietrzak
+                {{username}}
             </a>
             <a class="item" data-ng-click="logout()"><i class="ion ion-log-out"></i>
                 Wyloguj się
