Fixed back button text. Added validation on login page. Added forgot password button.Added some minor improvements

--- a/www/templates/about/popover.html
+++ b/www/templates/about/popover.html
@@ -1,9 +1,9 @@
-<ion-popover-view style="height: 125px">
+<ion-popover-view style="height: 125px; width: 150px">
     <ion-content>
         <div class="list">
-            <a class="item"> <i class="ion ion-person"></i>
+            <p class="item"> <i class="ion ion-person"></i>
                 {{username}}
-            </a>
+            </p>
             <a class="item" data-ng-click="logout()"><i class="ion ion-log-out"></i>
                 Wyloguj się
             </a>
