--- a/www/templates/login/change_password.html
+++ b/www/templates/login/change_password.html
@@ -4,11 +4,11 @@
             <div class="list">
                 <label class="item item-input">
                     <span class="input-label">Nowe hasło</span>
-                    <input name="password" type="password" data-ng-model="user.password" required>
+                    <input name="password" type="password" data-ng-model="user.password" data-ng-minlength="5" required>
                 </label>
                 <label class="item item-input">
                     <span class="input-label">Potwierdź nowe hasło</span>
-                    <input name="confirmPassword" type="password" data-ng-model="user.password2" required>
+                    <input name="confirmPassword" type="password" data-ng-model="user.password2" data-ng-minlength="5" required>
                 </label>
                 <p style="color: red;" data-ng-show="user.password!==user.password2">Wprowadź takie same hasła</p>
             </div>
