--- a/www/templates/login/login.html
+++ b/www/templates/login/login.html
@@ -4,14 +4,14 @@
             <div class="list">
                 <label class="item item-input">
                     <span class="input-label">Nazwa użytkownika</span>
-                    <input name="username" type="text" data-ng-model="data.username" data-ng-pattern="/[0-9]{11}/g" required>
-                    <span data-ng-show="form.username">
+                    <input name="username" type="text" data-ng-model="data.username" data-ng-pattern="/^[0-9]{11}$/" required>
                 </label>
+                <p style="color: grey;" data-ng-show="form.username.$invalid">Wprowadź prawidłową nazwę użytkownika.</p>
                 <label class="item item-input">
                     <span class="input-label">Hasło</span>
-                    <input name="password" type="password" data-ng-model="data.password" required>
+                    <input name="password" type="password" data-ng-model="data.password" data-ng-minlength="5" required>
                 </label>
-                <p style="color: red;" data-ng-show="error">Wprowadź prawidłowe dane logowania</p>
+                <p style="color: grey;" data-ng-show="form.password.$error.minlength">Wprowadź hasło składające się z minimum 5 znaków.</p>
             </div>
         </form>
         <div class="col text-center" data-ng-switch="data.username === data.password">
@@ -21,6 +21,9 @@
             <button data-ng-switch-when="false" style="width: 155px" class="button button-positive" data-ng-click="login('tab.treatments', data)" data-ng-disabled="form.$invalid">
                 Zaloguj się
             </button>
+            <p class="text-center">
+                <a data-ng-click="showAlert()">Nie pamiętam hasła</a>
+            </p>
         </div>
     </ion-content>
 </ion-view>
